--- a/views/home.ejs
+++ b/views/home.ejs
@@ -109,7 +109,7 @@
       <tr>
         <td><%= index + 1 %></td>
         <td><%= url.redirectUrl %></td>
-        <td><a href="http://localhost:3000/url/<%= url.shortId %>" target="_blank" ><%= url.shortId %></a></td>
+        <td><a href="http://localhost:3000/<%= url.shortId %>" target="_blank" ><%= url.shortId %></a></td>
         <td><%= url.visitCount.length %></td>
       </tr>
       <% }) %>
